# cloud_edge

./: .gitignore  README.md  about.md  test.md
Prototype/: config-cloud.json  config.json  recompile.sh  setup.sh
Prototype/include/: absIndex.h  charUint.h  chunkStructure.h  clientVar.h  cloudIndex.h  cloudOptThead.h  cloudOptThread.h  cloudReceiver.h  cloudStorageCore.h  configure.h  constVar.h  dataReceiver.h  edgeChunker.h  edgeVar.h  enclaveIndex.h  serverOptThead.h  statfsInfo.h  storageCore.h  uploader.h
Prototype/src/: CMakeLists.txt
Prototype/src/App/: CMakeLists.txt  dbeCloud.cc
Prototype/src/Cloud/: CMakeLists.txt  cloudIndex.cc  cloudIndex.h  cloudOptThread.cc  cloudReceiver.cc  cloudStorageCore.cc  dataReceiver.cc  dataWriter.cc  enclaveRecvDecoder.cc  storageCore.cc
Prototype/src/Database/: inMemoryDatabase.cc
Prototype/src/Enclave/: storeEnclave.edl
Prototype/src/Enclave/ecallSrc/ecall/: restoreECall.cc  storeECall.cc
Prototype/src/Enclave/ecallSrc/ecallIndex/: ecallFreqIndex.cc  enclaveBase.cc
Prototype/src/Enclave/ecallSrc/ecallStore/: ecallRecvDecoder.cc  ecallStorage.cc
Prototype/src/Enclave/ecallSrc/ecallUtil/: ecallClient.cc
Prototype/src/Enclave/include/: ecallClient.h  ecallRecvDecoder.h  ecallStorage.h  enclaveBase.h  restoreECall.h  storeOCall.h
Prototype/src/Enclave/ocallSrc/: storeOCall.cc
Prototype/src/Index/: enclaveIndex.cc
Prototype/src/Server/: dataReceiver.cc  edgeChunker.cc  serverOptThread.cc  storageCore.cc  uploader.cc
Prototype/src/Util/: charUint.cc  clientVar.cc  configure.cc  edgeVar.cc  statfsInfo.cc
